--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.personal.projects</groupId>
     <artifactId>jdown</artifactId>
     <version>1.0.0</version>
-
+    <name>Jdown</name>
     <dependencies>
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
@@ -23,8 +23,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>12</release>
                 </configuration>
             </plugin>
             <plugin>
