--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,21 @@
     <artifactId>jdown</artifactId>
     <version>1.0.0</version>
     <name>Jdown</name>
+
     <dependencies>
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
             <version>2.2.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
